Kubernetes_webhook.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: blog
  name: blog-webhook
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: blog-webhook
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: blog-webhook
    spec:
      containers:
      - env:
        - name: MAIL_FROM
          value: NTM1ODc1OTk5QHFxLmNvbQo=
        - name: MAIL_PASSWORD
          value: eHJwZnhxbHdkdmFwY2JjZAo=
        - name: MAIL_SMTP_PORT
          value: "465"
        - name: MAIL_SMTP_SERVER
          value: smtp.qq.com
        - name: WEBHOOK_CMD
          value: -template
        image: registry.cn-shenzhen.aliyuncs.com/rancher/webhook
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 1
          tcpSocket:
            port: 9000
          timeoutSeconds: 2
        name: blog-webhook
        ports:
        - containerPort: 9000
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 2
          tcpSocket:
            port: 9000
          timeoutSeconds: 2
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
        volumeMounts:
        - mountPath: /etc/webhook/source
          name: vol1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: webhookserviceaccount
      serviceAccountName: webhookserviceaccount
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 256
          name: zhen-blog-webhook
          optional: false
        name: vol1

---

apiVersion: v1
kind: Service
metadata:
  name: webhook-svc
  namespace: blog
spec:
  selector:
      app: blog-webhook
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
      nodePort: 30001
  type: NodePort
