kubernetes_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: blog
  name: zhen-blog
  generation: 3
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: zhen-blog
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: zhen-blog
    spec:
      containers:
      - image: registry.cn-chengdu.aliyuncs.com/zhen_namespaces/zhen_blog:1.1
        imagePullPolicy: Always
        lifecycle: {}
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 1
          tcpSocket:
            port: 4000
          timeoutSeconds: 2
        name: zhen-blog
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 2
          successThreshold: 2
          tcpSocket:
            port: 4000
          timeoutSeconds: 2
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  generation: 1
  name: zhen-blog
  namespace: blog
spec:
  rules:
  - host: www.zknow.top
    http:
      paths:
      - backend:
          serviceName: blog-svc
          servicePort: 4000
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - www.zknow.top
    - zknow.top
    secretName: "zhen-blog"
---

apiVersion: v1
kind: Service
metadata:
  name: blog-svc
  namespace: blog
spec:
  ports:
  - port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: zhen-blog
  sessionAffinity: None
  type: ClusterIP
